# mobile_robotics_maze

./: CMakeLists.txt  LICENSE  README.md  package.xml  ros_exam_auto.sh  setup.cfg
config/: KANE_simple_diff_drive.yaml  amcl.yaml  simple_diff_drive.yaml
launch/: mobile_robotics_hschoon.launch.py  simple_robot.launch.py
m-explore-ros2/explore/config/: params.yaml  params_costmap.yaml
meshes/: chassis_cube.stl  chassis_v3.dae  wheel.stl
meshes/smaze_wall_short/: model.sdf
mobile_robotics_hschoon/: CMakeLists.txt  package.xml  setup.py
mobile_robotics_hschoon/config/: amcl.yaml  twist_mux.yaml
mobile_robotics_hschoon/launch/: mobile_robotics_hschoon.launch.py
mobile_robotics_hschoon/meshes/marker_block/: model.sdf
mobile_robotics_hschoon/meshes/smaze2d/: model.sdf
mobile_robotics_hschoon/meshes/smaze_wall/: model.sdf
mobile_robotics_hschoon/rviz/: mobile_robotics_hschoon.rviz
mobile_robotics_hschoon/scripts/: find_yellow.py
mobile_robotics_hschoon/urdf/: mobile_robotics_hschoon.xacro
mobile_robotics_hschoon/worlds/: smaze2d.world
rviz/: mobile_robotics_hschoon.rviz  simple_robot_nav2.rviz
scripts/: NOTW_find_yellow.py  find_yellow.py
urdf/: KANE_mobile_robotics_hschoon.xacro  mobile_robotics_hschoon.xacro  simple_robot_nav2.urdf.xacro
