<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_robotics_hschoon</name>
  <version>0.0.1</version>
  <description>This ROS package was created as an assessment task for the course Mobile Robotics (Industrial Informatics, M.Eng.).</description>
  <maintainer email="heiko.schoon@stud.hs-emden-leer.de">scarecrow3773</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>explore</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
